[package]
name = "rssh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rssh-server"
path = "src/bin/server.rs"

[[bin]]
name = "rssh-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
bytes = "1.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
